--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  behave-tests:
+  RunFunctionalTests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -20,17 +20,31 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Install chromedriver
+        uses: nanasess/setup-chromedriver@master
+
       - name: Set up virtual environment and install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install behave selenium==3.141.0 urllib3==1.26.4
-          
-      - name: Run tests with behave
+          pip install behave behave-webdriver selenium==3.141.0 urllib3==1.26.4
+
+      - name: Run Squirrel Server
+        run: |
+          nohup python3 squirrel_server.py &
+          sleep 5
+
+      - name: Run HTTP Server
+        run: |
+          nohup python3 -m http.server 8000 &
+          sleep 3
+
+      - name: Run behave tests
         run: |
           source venv/bin/activate
           behave
+
 
 
   pytest-tests:
