--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x
+          python-version: 3.12
 
       - name: Install chromedriver
         uses: nanasess/setup-chromedriver@master
@@ -28,7 +28,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install behave behave-webdriver selenium==3.141.0 urllib3==1.26.4
+          pip install behave selenium==4.27.1 urllib3==1.26.4
 
       - name: Run Squirrel Server
         run: |
