--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,16 @@ on:
     branches:
       - main
 
+name: Run Functional Tests
+
+on: [push]
+
 jobs:
   RunFunctionalTests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.12
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
       - name: Install chromedriver
         uses: nanasess/setup-chromedriver@master
@@ -28,24 +27,12 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install behave selenium==4.27.1 urllib3==1.26.4
-
-      - name: Run Squirrel Server
-        run: |
-          nohup python3 squirrel_server.py &
-          sleep 5
-
-      - name: Run HTTP Server
-        run: |
-          nohup python3 -m http.server 8000 &
-          sleep 3
+          pip install behave behave-webdriver
 
       - name: Run behave tests
         run: |
           source venv/bin/activate
           behave
-
-
 
   pytest-tests:
     runs-on: ubuntu-latest
