--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,21 @@ jobs:
           pip install --upgrade pip
           pip install behave behave-webdriver
 
+      - name: Run Squirrel Server
+        run: |
+          nohup python3 squirrel_server.py &
+          sleep 5
+
+      - name: Run HTTP Server
+        run: |
+          nohup python3 -m http.server 8000 &
+          sleep 3
+
       - name: Run behave tests
         run: |
           source venv/bin/activate
           behave
+
 
   pytest-tests:
     runs-on: ubuntu-latest
