--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,43 +14,36 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-
-      - name: Install chromedriver
+      - name: Install ChromeDriver
         uses: nanasess/setup-chromedriver@master
-
       - name: Install dependencies
         run: |
           pip install selenium==3.141.0
           pip install behave==1.2.6
           pip install behave-webdriver==0.3.1
-
-      - name: Set up Chrome options
+      - name: Start Chrome in headless mode
         run: |
-          export DISPLAY=:99
           google-chrome --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 &
-
+      - name: Wait for Chrome to be ready
+        run: sleep 5
       - name: Run functional tests
         run: behave features/
-
 
   pytest-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-
       - name: Install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Run pytest tests
         run: |
           source venv/bin/activate
