--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,10 @@ jobs:
       - name: Start Chrome in headless mode
         run: |
           google-chrome --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 &
-      - name: Wait for Chrome to initialize
+      - name: Wait for Chrome to be ready
         run: sleep 5
       - name: Run functional tests
-        run: |
-          export DISPLAY=:99
-          behave features/
+        run: behave features/
 
   pytest-tests:
     runs-on: ubuntu-latest
