--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,35 +15,39 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Install chromedriver
+      - name: Install ChromeDriver
         uses: nanasess/setup-chromedriver@master
 
-      - name: Install dependencies
+      - name: Set up Python environment
         run: |
-          pip install selenium==3.141.0
-          pip install behave==1.2.6
-          pip install behave-webdriver==0.3.1
+          python -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install selenium==3.141.0 behave==1.2.6 behave-webdriver==0.3.1
 
       - name: Run functional tests
-        run: behave features/
-
-
+        run: |
+          source venv/bin/activate
+          behave features/
 
   pytest-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-      - name: Install dependencies
+
+      - name: Set up environment
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run pytest tests
         run: |
           source venv/bin/activate
