--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,25 +10,20 @@ on:
 
 jobs:
   RunFunctionalTests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Install chromedriver
+      uses: nanasess/setup-chromedriver@master
+    - name: Install dependencies
+      run: |
+        pip install selenium==3.141.0
+        pip install behave==1.2.6
+        pip install behave-webdriver==0.3.1
+    - name: Run functional tests
+      run: behave features/
 
-      - name: Install ChromeDriver
-        uses: nanasess/setup-chromedriver@master
-
-      - name: Set up Python environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install selenium==3.141.0 behave==1.2.6 behave-webdriver==0.3.1
-
-      - name: Run functional tests
-        run: |
-          source venv/bin/activate
-          behave features/
 
   pytest-tests:
     runs-on: ubuntu-latest
